...
            <include layout="@layout/toolbar" />

        </android.support.design.widget.AppBarLayout>


        <com.sthagios.stopmotion.list.RecyclerViewEmptyView
            android:id="@+id/recyclerViewImageList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appbar"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:elevation="4dp"
...
