...
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop" />
    </android.support.v7.widget.CardView>

    <ImageButton
        android:id="@+id/button_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
...
            android:textSize="24sp"
            tools:text="3 sec" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
...
