...
            app:fabSize="mini" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/expand_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/ripple_primary_rectangle_round_corners"
            android:src="@drawable/ic_share_black_48dp"
            app:fabSize="mini" />

...
